--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
     </section>
 
     <!-- HINT -->
-    <div class="hint" id="hint">El “No” parece que tiene miedo, jaajsjas 😈</div>
+    <div class="hint" id="hint">El “No” parece que te tiene miedo 😧</div>
 
     <section class="result" id="result">
-      <h2>YEY! 🎉</h2>
+      <h2>No se como pero sabia que ibas a decir que si! JAJAJJAJAJA te amo❤️ 🎉</h2>
       <img
         class="fireworks"
         src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
