Change title and result message in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Will you be my Valentine?</title>
+  <title>Serias mi San Valentin?</title>
 
   <!-- Confetti library -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
@@ -182,7 +182,7 @@
     <div class="hint" id="hint">El “No” parece que te tiene miedo 😧</div>
 
     <section class="result" id="result">
-      <h2>No se como pero sabia que ibas a decir que si! JAJAJJAJAJA te amo❤️ 🎉</h2>
+      <h2>Sabia que ibas a decir que si! JAJAJJA te amo❤️ 🎉</h2>
       <img
         class="fireworks"
         src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
